[tool.poetry]
name = "idm_lp"
version = "1.13.4"
description = "LP модуль позволяет работать приемнику сигналов «IDM multi» работать в любых чатах. Так же он добавляет игнор, глоигнор, мут и алиасы."
authors = ["lordralinc"]
license = "MIT"
readme = "README.md"
homepage = "https://idmduty.ru"
repository = "https://github.com/IDM-Team/idm_lp"
documentation = "https://github.com/IDM-Team/idm_lp"

[tool.poetry.dependencies]
python = "^3.8"
vkbottle = "2.7.12"
pydantic = "1.7.3"
python-rucaptcha = "3.0"
APScheduler = "^3.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
